[gd_scene load_steps=9 format=3 uid="uid://bnu5fgicsfjp2"]

[ext_resource type="Script" path="res://scripts/pause_screen.gd" id="1_523y0"]
[ext_resource type="Theme" uid="uid://cwhstwqgcmq20" path="res://asset/theme_ui.tres" id="1_v1dpk"]
[ext_resource type="Script" path="res://scripts/component/control_generic.gd" id="2_f86qg"]
[ext_resource type="PackedScene" uid="uid://b0aryhuic4blb" path="res://scene/options_menu.tscn" id="4_ob66d"]
[ext_resource type="FontFile" uid="uid://dreclkhvqjl2p" path="res://asset/font/DeltaBlock-Regular.ttf" id="5_vie6y"]
[ext_resource type="Script" path="res://scripts/component/pause_screen_borders.gd" id="6_gwt4t"]

[sub_resource type="FontVariation" id="FontVariation_w61ex"]
base_font = ExtResource("5_vie6y")
spacing_glyph = -2
spacing_top = -28
spacing_bottom = -14

[sub_resource type="LabelSettings" id="LabelSettings_sfsii"]
line_spacing = 0.0
font = SubResource("FontVariation_w61ex")
font_size = 96
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(4, 4)

[node name="pause_gui" type="CanvasLayer"]
process_mode = 3
layer = 127
script = ExtResource("1_523y0")

[node name="pause_screen" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 64
metadata/_edit_use_anchors_ = true

[node name="menu_1" type="VBoxContainer" parent="pause_screen"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="continue" type="Button" parent="pause_screen/menu_1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_neighbor_top = NodePath("../return")
focus_neighbor_bottom = NodePath("../options")
focus_next = NodePath("../options")
focus_previous = NodePath("../return")
theme = ExtResource("1_v1dpk")
text = "continue"
script = ExtResource("2_f86qg")

[node name="options" type="Button" parent="pause_screen/menu_1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_neighbor_top = NodePath("../continue")
focus_neighbor_bottom = NodePath("../return")
focus_next = NodePath("../return")
focus_previous = NodePath("../continue")
theme = ExtResource("1_v1dpk")
text = "configure"
script = ExtResource("2_f86qg")

[node name="return" type="Button" parent="pause_screen/menu_1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
focus_neighbor_top = NodePath("../options")
focus_neighbor_bottom = NodePath("../continue")
focus_next = NodePath("../continue")
focus_previous = NodePath("../options")
theme = ExtResource("1_v1dpk")
text = "return to menu"
script = ExtResource("2_f86qg")

[node name="options_menu" parent="pause_screen" instance=ExtResource("4_ob66d")]
unique_name_in_owner = true
layout_mode = 2

[node name="title" type="Label" parent="pause_screen"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
text = "отдых"
label_settings = SubResource("LabelSettings_sfsii")
horizontal_alignment = 2

[node name="border" type="Control" parent="."]
z_index = -1
z_as_relative = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("6_gwt4t")
metadata/_edit_use_anchors_ = true

[connection signal="pause_toggled" from="." to="border" method="set_paused"]
[connection signal="element_hovered" from="pause_screen/menu_1/continue" to="." method="on_hover"]
[connection signal="pressed" from="pause_screen/menu_1/continue" to="." method="continue_pressed"]
[connection signal="element_hovered" from="pause_screen/menu_1/options" to="." method="on_hover"]
[connection signal="pressed" from="pause_screen/menu_1/options" to="." method="configure_pressed"]
[connection signal="element_hovered" from="pause_screen/menu_1/return" to="." method="on_hover"]
[connection signal="pressed" from="pause_screen/menu_1/return" to="." method="return_to_menu_pressed"]
[connection signal="exit_menu" from="pause_screen/options_menu" to="." method="back_pressed"]
